@@ -1,3 +1,8 @@
+2007-05-12  Vlad Seryakov  <seryakov@users.sf.net>
+
+        nsd/adpparse.c:
+        nsd/tclhttp.c: Silence compiler warnings
+
 2007-04-30  Vlad Seryakov  <seryakov@users.sf.net>
 
         nsperm/nsperm.c:
